# surface

./: .gitmodules  LICENSE  README.md  cabal.project  refinement.cabal  stack.yaml  surface.cabal  test.surf
app/: Main.hs
src/: Context.hs  Evaluation.hs  Expr.hs  Judgement.hs  Module.hs  Parser.hs  Prelude.surf  REPL.hs
src/Control/: State.hs
src/Data/: Result.hs  Semiring.hs
src/Data/Functor/Classes/Eq/: Generic.hs
src/Surface/: Binder.hs  Command.hs  Datatype.hs  Erasure.hs  Proof.hs  Usage.hs
src/Text/: Pretty.hs
test/: Spec.hs
test/Data/Functor/: Listable.hs
test/Parser/: Spec.hs
test/Surface/Expr/: Spec.hs
test/Surface/Judgement/: Spec.hs
test/Surface/Proof/: Spec.hs
test/Test/Hspec/: LeanCheck.hs
