name:                refinement
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/robrix/refinement#readme
license:             BSD3
license-file:        LICENSE
author:              Rob Rix
maintainer:          rob.rix@me.com
copyright:           Rob Rix
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Context
                     , Control.State
                     , Data.Result
                     , Expr
                     , Judgement
                     , Module
                     , Parser
                     , Text.Pretty
  build-depends:       base >= 4.7 && < 5
                     , freer-cofreer
                     , parsers
                     , recursion-schemes
                     , transformers
                     , trifecta
                     , unordered-containers
  default-language:    Haskell2010
  ghc-options:         -Wall -Wno-name-shadowing

executable refinement
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , optparse-applicative
                     , refinement
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , refinement
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/robrix/refinement
