name:                surface
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/robrix/surface#readme
license:             BSD3
license-file:        LICENSE
author:              Rob Rix
maintainer:          rob.rix@me.com
copyright:           Rob Rix
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Context
                     , Control.State
                     , Expr
                     , Judgement
                     , Module
                     , Parser
                     , REPL
                     , Surface.Binder
                     , Surface.Command
                     , Surface.Proof
                     , Text.Pretty
  build-depends:       base >= 4.7 && < 5
                     , bifunctors
                     , freer-cofreer
                     , hashable
                     , haskeline
                     , parsers
                     , recursion-schemes
                     , trifecta
                     , unordered-containers
  default-language:    Haskell2010
  ghc-options:         -Wall -Wno-name-shadowing

executable surface
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , optparse-applicative
                     , surface
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Data.Functor.Listable
                     , Parser.Spec
                     , Surface.Expr.Spec
                     , Surface.Proof.Spec
                     , Test.Hspec.LeanCheck
  build-depends:       base
                     , hspec
                     , hspec-core
                     , HUnit
                     , leancheck
                     , recursion-schemes
                     , surface
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/robrix/surface
